--- a/kt/client-create-wrapper.html
+++ b/kt/client-create-wrapper.html
@@ -82,7 +82,7 @@
 
 
                 default:
-                    console.warn('Received not Omni event', e.data)
+                    console.warn('Received not Omni event', event.data)
             }
         }
 
