--- a/kt/client-create-wrapper.html
+++ b/kt/client-create-wrapper.html
@@ -48,6 +48,9 @@
                 });
                 console.info('fif loaded')
             }
+            iframe.onload = () => {
+              console.info('fif loaded outside')
+            }
             iframe.src = `client-create.html?type=${type}`;
 
 
