--- a/kt/client-create-wrapper.html
+++ b/kt/client-create-wrapper.html
@@ -41,7 +41,7 @@
                   authorization: document.cookie,
                   authentificationType: 'KEYCLOAK',
                   postMessageType: 'INIT',
-                  parentUrl: windwo.location.href, 
+                  parentUrl: window.location.href, 
                   communicationId: payload.requestData.id,
                   communicationChannelId: payload.requestData.channelType,
                   сommunicationChannelAddr: payload.requestData.originator
