--- a/kt/client-create-wrapper.html
+++ b/kt/client-create-wrapper.html
@@ -21,8 +21,8 @@
             //     // что-то прислали с неизвестного домена - проигнорируем..
             //     return;
             // }
-        const evaddr = event.source.location;
-        if (evaddr && evaddr.indexOf('client-create.html')) {
+   
+        if (event?.data?.communicationId) {
           alert('FROM MFE TO OMNI\n' + JSON.stringify(event.data,null,'  '));
           return;
         }
