--- a/kt/client-create.html
+++ b/kt/client-create.html
@@ -62,7 +62,7 @@
     <form method="dialog" id="flForm" style="display: none;">
       <label>
         <span>firstName</span>
-        <input name="firstName" required autofocus>
+        <input name="firstName" required>
       </label>
       <label>
         <span>middleName</span>
@@ -83,7 +83,7 @@
     <form method="dialog" id="ulForm" style="display: none;">
       <label>
         <span>Organization Name Ru</span>
-        <input name="organizationNameRu" required autofocus>
+        <input name="organizationNameRu" required>
       </label>
       <label>
         <span>Organization Name Kz</span>
